I linked the pages and sections

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
  <img src="images/logoA.jpg" alt="Microsoft" class="logo">
      
       <ul class="main-menu show">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Skills</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#skill">Skills</a></li>
           <li><a href="#">Project</a></li>
           <li><a href="#">Experience</a></li>
-          <li><a href="#">Blogs</a></li>
-          <li><a href="#"> Contact Me</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="Htmls\blog.html">Blogs</a></li>
+          <li><a href="Htmls\contact.html"> Contact Me</a></li>
+          <li><a href="Htmls\login.html">Login</a></li>
       </ul>
       <ul class="right-menu">
           <li>
@@ -50,7 +50,7 @@
 
     <!--Skills-->
     <section class="skills">
-        <div class="skill">
+        <div id="skill">
             <img src="images/hrtml.png"  alt="">
             <h3>HTML</h3>
             <p>
