i changed the position of the header and displayed the images when they were not shown

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./Css/index.css">
+    <link rel="stylesheet" href="Css\index.css">
     <title> Microsoft official homepage</title>
 </head>
 <body>
@@ -36,8 +36,9 @@
     </nav>
     <!--Showcase-->
     <header class="showcase">
-        <h2>GATERA ALICE</h2>
+
         <img src="./images/gatera.jpg">
+        <h2>GATERA ALICE</h2>
         <p>Software Engineer</p>
         <a href="#" class="btn">
             Welcome <i class="fas fa-chevron-right"></i>
@@ -118,7 +119,7 @@
          </a>
         </div> 
         <div class="project">
-            <img src="images/base.jpg" alt="">
+            <img src="./images/base (1).jpg" alt="">
             <h3>Base Apparel coming soon page</h3>
             <p>
                 This layout looks simple enough, but there are some interesting details to it that will test your CSS skills. You'll also get to practice basic form validation.
@@ -127,7 +128,7 @@
          </a>
         </div> 
         <div class="project">
-            <img src="images/paper.jpg"  alt="">
+            <img src="./images/paper (1).jpg"  alt="">
             <h3>Rock, Paper, Scissors game
             </h3>
             <p>This challenge will test your HTML, CSS and JavaScript skills. There's even a Rock, Paper, Scissors, Lizard, Spock version if you really want to challenge yourself.</p>
