fixes home link blog page, contact page, login page

--- a/Htmls/login.html
+++ b/Htmls/login.html
@@ -17,10 +17,7 @@
      <img src="../images/logoA.jpg" alt="Microsoft" class="logo">
          
           <ul class="main-menu show">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="#">Skills</a></li>
-              <li><a href="#">Project</a></li>
-              <li><a href="#">Experience</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="blog.html">Blogs</a></li>
               <li><a href="contact.html"> Contact Me</a></li>
               <li><a href="login.html">Login</a></li>
