fixes the paragrand theme and add onother page , article.html

--- a/Htmls/blog.html
+++ b/Htmls/blog.html
@@ -44,11 +44,11 @@
    <div class="row">
        <div class="left-column">
            <div class="card">
-           <h2>TITLE HEADING</h2>
-           <h5>Title description,Dec7,2017</h5>
+           <h2>Helping children in care stay in contact with their birth families during COVID-19</h2>
+           <h5>2 June 2020 </h5>
            <img src="../images/blog111.jpg" alt="blog"/>
            <p>Some text..</p>
-           <p>Sunt is third person plural present indicative of the copula esse ‘be’ in Latin, so the most literal translation is “(they) are.” I don’t recall seeing this as a word in any other common language, so both Topic Bot and I are assuming it is Latin</p>
+           <p>This short article outlines how out-of-home care caseworkers can support contact between children and their birth families during social restrictions.</p>
        </div>
        <div class="card">
         <h2>TITLE HEADING</h2>
