--- a/Htmls/login.html
+++ b/Htmls/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../Css/bootstrap.css">  
     <link rel="stylesheet" href="../Css/login.css">
     <title> Login page</title>
 </head>
@@ -44,21 +45,28 @@
         </form>
     </div>
 </section>
-  <!--Footer-->
-  <footer class="footer">
-    <div class="footer-inner">
-<ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">Skills</a></li>
-<li><a href="#">Project</a></li>
-<li><a href="#">Experience</a></li>
-<li><a href="#">Blogs</a></li>
-<li><a href="#">Contact Me</a></li>
-<li><a href="#">Login</a></li>
-<li><a href="#">&copy;Alice GATERA 2020</a></li>
-</ul>
-    </div>
+<footer>
+    <section id="Contact">
+        <div class="final">
+            <div class="icons">
+                <ul>
+                    <li><a href="https://github.com/Alice-Gatera"><i class="fab fa-github"></i></a></li>
+                    <li><a href="mailto:aligatera15@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="#"><i class="fas fa-phone-alt"></i></a></li>
+                    <li><a href="#"><i class="fas fa-map-marker"></i></a></li>
+
+                </ul>
+            </div>
+
+            <div class=Copyright>
+                <p><small>&copy; 2020 Alice GATERA|All Rights Reserved</small></p>
+            </div>
+
+    </section>
+
 </footer>
+
+</section>
 <script>
     document.querySelector('.menu-btn').addEventListener('click'),
 () => document.querySelector('.main-menu').classList.toggle('show');
