--- a/Htmls/article.html
+++ b/Htmls/article.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /> -->
-    <link rel="stylesheet" href="../Css/article.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="../Css/bootstrap.css">  
+<link rel="stylesheet" href="../Css/article.css">
     <title> Read article page</title>
 </head>
 <body>
@@ -31,55 +32,52 @@
           </li>
       </ul>
     </nav>
-
+<div class="jumbotron">
 <div class="upload-image">
 </div>
 <div class="article-title"></div> 
 <div class="content">
-
 </div>
+<input type="submit" name="submit" class="send-btn" value="Edit">
+<input type="submit" name="submit" class="send-btn" value="Delete">
 <h3>Comments</h3>
-
-    <form class= "add-comment">
-        <input type="text" name= "name" placeholder="Enter your name">
-        <textarea type ="text" rows ="8" name ="message" placeholder="Add comment"></textarea>
-        <button type ="submit">Submit</button>
-    </form>
-
-<div class="display-comment">
-</div> 
+<form class="add-comment">
+    <input type="name" name="name" placeholder="Name"> <br>
+    <textarea name="message" placeholder="Message" rows="4"></textarea> <br>
+    <input type="submit" value="SEND">
+  </form>
+</div>
+<div class="display-comment"></div> 
 
 
-    <section class="follow">
-        <p>Follow Alice</p>
-        <a href="http://facebook.com">
-        <img src="../images/social-fb.png" alt="Facebook">
-        </a>
-        <a href="http://twitter.com">
-            <img src="../images/social-twitter.png" alt="Twitter">
-            </a>
-            <a href="http://linkedin.com">
-                <img src="../images/social-linkedin.png" alt="Linkedin">
-                </a>
-    </section>
-    <!--Footer-->
-    <footer class="footer">
-        <div class="footer-inner">
-  <ul>
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Skills</a></li>
-  <li><a href="#">Project</a></li>
-  <li><a href="#">Experience</a></li>
-  <li><a href="#">Blogs</a></li>
-  <li><a href="#">Contact Me</a></li>
-  <li><a href="#">Login</a></li>
-  <li><a href="#">&copy;Alice GATERA 2020</a></li>
-  </ul>
-        </div>
+ <footer>
+        <section id="Contact">
+            <div class="final">
+                <div class="icons">
+                    <ul>
+                        <li><a href="https://github.com/Alice-Gatera"><i class="fab fa-github"></i></a></li>
+                        <li><a href="mailto:aligatera15@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                        <li><a href="#"><i class="fas fa-phone-alt"></i></a></li>
+                        <li><a href="#"><i class="fas fa-map-marker"></i></a></li>
+
+                    </ul>
+                </div>
+
+                <div class=Copyright>
+                    <p><small>&copy; 2020 Alice GATERA|All Rights Reserved</small></p>
+                </div>
+
+        </section>
+
     </footer>
+
+</section>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
+<script src="../Scripts/firebase.js"></script>
 <script src="../Scripts/article.js"></script>
+
+
   </body>
   </html>
