--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" /> 
     <link rel="stylesheet" href="Css\index.css">
     <title> Alice landing page</title>
 </head>
@@ -18,9 +18,9 @@
      
       <ul class="main-menu show">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#skill">Skills</a></li>
+          <!-- <li><a href="#skill">Skills</a></li>
           <li><a href="#">Project</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="#">Experience</a></li> -->
           <li><a href="Htmls\blog.html">Blogs</a></li>
           <li><a href="Htmls\contact.html"> Contact Me</a></li>
           <li><a href="Htmls\login.html">Login</a></li>
@@ -200,34 +200,26 @@
 </div>
 </div>
  
-    <section class="follow">
-        <p>Follow Alice</p>
-        <a href="http://facebook.com">
-        <img src="./images/social-fb.png" alt="Facebook">
-        </a>
-        <a href="http://twitter.com">
-            <img src="./images/social-twitter.png" alt="Twitter">
-            </a>
-            <a href="http://linkedin.com">
-                <img src="./images/social-linkedin.png" alt="Linkedin">
-                </a>
+<footer>
+    <section id="Contact">
+        <div class="final">
+            <div class="icons">
+                <ul>
+                    <li><a href="https://github.com/Alice-Gatera"><i class="fab fa-github"></i></a></li>
+                    <li><a href="mailto:aligatera15@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="#"><i class="fas fa-phone-alt"></i></a></li>
+                    <li><a href="#"><i class="fas fa-map-marker"></i></a></li>
+
+                </ul>
+            </div>
+
+            <div class=Copyright>
+                <p><small>&copy; 2020 Alice GATERA|All Rights Reserved</small></p>
+            </div>
+
     </section>
 
-    <!--Footer-->
-    <footer class="footer">
-        <div class="footer-inner">
-  <ul>
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Skills</a></li>
-  <li><a href="#">Project</a></li>
-  <li><a href="#">Experience</a></li>
-  <li><a href="#">Blogs</a></li>
-  <li><a href="#">Contact Me</a></li>
-  <li><a href="#">Login</a></li>
-  <li><a href="#">&copy;Alice GATERA 2020</a></li>
-  </ul>
-        </div>
-    </footer>
+</footer>
     <script>
         document.querySelector('.menu-btn').addEventListener('click'),
     () => document.querySelector('.main-menu').classList.toggle('show');
