I create  admin Dashboard  with edit articles

--- a/Htmls/blog.html
+++ b/Htmls/blog.html
@@ -38,6 +38,8 @@
     <div class="articles">
 
     </div>
+    <input type="submit" name="submit" class="send-btn" value="Edit">
+    <input type="submit" name="submit" class="send-btn" value="Delete">
       
     <footer>
         <section id="Contact">
