--- a/Htmls/Admin/articleDashboard.html
+++ b/Htmls/Admin/articleDashboard.html
@@ -1,75 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../Css/dashboard.css">
-   <link rel="stylesheet" href="../../Css/articleDashboard.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../../Css/dashboard.css" />
+    <link rel="stylesheet" href="../../Css/articleDashboard.css" />
     <title>Article Dashboard</title>
- 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<!-- <script src="../Scripts/dashboard.js"></script> -->
-</head>
-<body>
+    <!-- <script src="../Scripts/dashboard.js"></script> -->
+  </head>
+  <body>
     <div class="header">
-        <a href="#" class="nav-trigger"><span>
-        </span></a>
+      <a href="#" class="nav-trigger"><span> </span></a>
     </div>
     <div class="side-nav">
-<nav>
-    <ul>
-        <li>
+      <nav>
+        <ul>
+          <li>
             <a href="./profile.html">
-                <span>
-                    <i class="fa fa-user"> </i></span>
-<span>Profile</span>
+              <span> <i class="fa fa-user"> </i></span>
+              <span>Profile</span>
             </a>
-        </li>
-        <li>
+          </li>
+          <li>
             <a href="./userDashboard.html">
-                <span>
-                    <i class="fa fa-user"> </i></span>
-<span>Users</span>
+              <span> <i class="fa fa-user"> </i></span>
+              <span>Users</span>
             </a>
-        </li>
-  <li>
-    <a href="./messageDashboard.html">
-        <span><i class="fa fa-envelope"></i></span>
-        <span> Messages</span>
-    </a>
-</li>
-<li class="active">
-    <a href="./commentDashboard.html">
-        <span><i class="fa fa-bar-chart"></i></span>
-        <span>Comments</span>
-    </a>
-</li>
-<li>
-    <a href="./articleDashboard.html">
-        <span><i class="fa fa-credit-card-alt"></i></span>
-        <span>Articles
-        </span>
-    </a>
-</li>
-</ul>
-</nav>
+          </li>
+          <li>
+            <a href="./messageDashboard.html">
+              <span><i class="fa fa-envelope"></i></span>
+              <span> Messages</span>
+            </a>
+          </li>
+          <li class="active">
+            <a href="./commentDashboard.html">
+              <span><i class="fa fa-bar-chart"></i></span>
+              <span>Comments</span>
+            </a>
+          </li>
+          <li>
+            <a href="./articleDashboard.html">
+              <span><i class="fa fa-credit-card-alt"></i></span>
+              <span>Articles </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div class="main-content">
-<h1>Articles</h1>
-<a href="../addArticle.html">Add New Article</a>
-<a href="../../Htmls/blog.html"></a>
+      <h1>Articles</h1>
+      <a href="../addArticle.html">Add New Article</a>
+      <a href="../../Htmls/blog.html"></a>
     </div>
-    <div id="Articles" class="articles"> </div>
+    <div id="Articles" class="articles"></div>
 
-    
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-analytics.js"></script> -->
     <script src="../../Scripts/config.js"></script>
     <script src="../../Scripts/blogDashboard.js"></script>
-
-</body>
+  </body>
 </html>
