Create new pages and add link to Dashboard to facilitate the navigatio n

--- a/Htmls/Admin/articleDashboard.html
+++ b/Htmls/Admin/articleDashboard.html
@@ -18,6 +18,40 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <!-- <script src="../Scripts/dashboard.js"></script> -->
   </head>
+  <div class="menu-btn">
+    <i class="fas fa-bars fa-2x"></i>
+</div>
+  <div class="container">
+      <!--Nav-->
+      <nav class="main-nav">
+ <img src="../../images/logoA.jpg" alt="Microsoft" class="logo">
+     
+      <ul class="main-menu show">
+          <li><a href="../../index.html">Home</a></li>
+          <!-- <li><a href="#skill">Skills</a></li>
+          <li><a href="#">Project</a></li>
+          <li><a href="#">Experience</a></li> -->
+          <li><a href="../../Htmls/blog.html">Blogs</a></li>
+          <li><a href="../../Htmls/contact.html"> Contact Me</a></li>
+          <li><a href="../Admin/articleDashboard.html">Dashboard</a></li>
+          <li><a href="../../Htmls/login.html">Login</a></li>
+      </ul>
+      <ul class="right-menu">
+          <li>
+              <a href="#">
+                <i class="fas fa-search" >
+
+                </i>
+          </li>
+      </ul>
+    </nav>
+    <!--Showcase-->
+    <header class="showcase">
+
+        <img src="../../images/gatera.jpg">
+        <h2>GATERA ALICE</h2>
+        <!-- <p>Software Engineer</p> -->
+    </header>
   <body>
     <div class="header">
       <a href="#" class="nav-trigger"><span> </span></a>
@@ -25,12 +59,13 @@
     <div class="side-nav">
       <nav>
         <ul>
-          <li>
+          <!-- <li>
             <a href="./profile.html">
-              <span> <i class="fa fa-user"> </i></span>
+             
+              <span>  <img src="../../images/images.jpg"/> </span>
               <span>Profile</span>
             </a>
-          </li>
+          </li> -->
           <li>
             <a href="./userDashboard.html">
               <span> <i class="fa fa-user"> </i></span>
@@ -38,20 +73,20 @@
             </a>
           </li>
           <li>
-            <a href="./messageDashboard.html">
+            <a href="/Htmls/Admin/messageDashboard.html">
               <span><i class="fa fa-envelope"></i></span>
               <span> Messages</span>
             </a>
           </li>
           <li class="active">
             <a href="./commentDashboard.html">
-              <span><i class="fa fa-bar-chart"></i></span>
+              <span><i class="fa fa-comments"></i></span>
               <span>Comments</span>
             </a>
           </li>
           <li>
             <a href="./articleDashboard.html">
-              <span><i class="fa fa-credit-card-alt"></i></span>
+              <span><i class="fas fa-newspaper"></i></span>
               <span>Articles </span>
             </a>
           </li>
