--- a/Htmls/Admin/profile.html
+++ b/Htmls/Admin/profile.html
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../Css/dashboard.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../../Css/dashboard.css" />
     <title>Profile Dashboard</title>
- 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="../Scripts/dashboard.js"></script>
-</head>
-<body>
+    <script src="../../Scripts/profile.js"></script>
+  </head>
+  <body>
     <div class="header">
-        <a href="#" class="nav-trigger"><span>
-        </span></a>
+      <a href="#" class="nav-trigger"><span> </span></a>
     </div>
     <div class="side-nav">
-<nav>
-    <ul>
-        <li>
+      <nav>
+        <ul>
+          <!-- <li>
             <a href="./profile.html">
-                <span>
-                    <i class="fa fa-user"> </i></span>
-<span>Profile</span>
+              <span> <i class="fa fa-user"> </i></span>
+              <span>Profile</span>
             </a>
-        </li>
-        <li>
+          </li> -->
+          <li>
             <a href="./userDashboard.html">
-                <span>
-                    <i class="fa fa-user"> </i></span>
-<span>Users</span>
+              <span> <i class="fa fa-user"> </i></span>
+              <span>Users</span>
             </a>
-        </li>
-  <li>
-    <a href="./messageDashboard.html">
-        <span><i class="fa fa-envelope"></i></span>
-        <span> Messages</span>
-    </a>
-</li>
-<li class="active">
-    <a href="./commentDashboard.html">
-        <span><i class="fa fa-comment-o"></i></span>
-        <span>Comments</span>
-    </a>
-</li>
-<li>
-    <a href="./articleDashboard.html">
-        <span><i class="fa fa-credit-card-alt"></i></span>
-        <span>Articles
-        </span>
-    </a>
-</li>
-</ul>
-</nav>
+          </li>
+          <li>
+            <a href="./messageDashboard.html">
+              <span><i class="fa fa-envelope"></i></span>
+              <span> Messages</span>
+            </a>
+          </li>
+          <li class="active">
+            <a href="./commentDashboard.html">
+              <span><i class="fa fa-comment-o"></i></span>
+              <span>Comments</span>
+            </a>
+          </li>
+          <li>
+            <a href="./articleDashboard.html">
+              <span><i class="fa fa-credit-card-alt"></i></span>
+              <span>Articles </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <div class="main-content">
-Profile
-    </div>
-</body>
+    <aside class="side-nav" id="show-side-navigation1">
+      <i
+        class="fa fa-bars close-aside hidden-sm hidden-md hidden-lg"
+        data-close="show-side-navigation1"
+      ></i>
+      <div class="heading">
+        <img
+          src="../../images/blog11.jpg"
+          alt=""
+        />
+        <div class="info">
+          <h3><a href="#">Gatera Alice</a></h3>
+          <p>Web designer and developper.</p>
+        </div>
+      </div>
+
+      
+  </body>
 </html>
