--- a/Htmls/contact.html
+++ b/Htmls/contact.html
@@ -21,16 +21,17 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="blog.html">Blogs</a></li>
           <li><a href="contact.html"> Contact Me</a></li>
+          <li><a href="../Htmls/Admin/articleDashboard.html">Dashboard</a></li>
           <li><a href="login.html">Login</a></li>
       </ul>
       <ul class="right-menu">
-          <li>
+          <!-- <li>
               <a href="#">
                 <i class="fas fa-search" >
 
                 </i>
                 
-          </li>
+          </li> -->
       </ul>
     </nav>
     <!--Showcase-->
@@ -38,10 +39,6 @@
 
         <img src="../images/gatera.jpg">
         <h2>GATERA ALICE</h2>
-        <p>Software Engineer</p>
-        <a href="#" class="btn">
-            Welcome <i class="fas fa-chevron-right"></i>
-        </a>
     </header>
     <!--Contact-->
     <section class="contact-section">
@@ -63,7 +60,10 @@
                 </form>
             </div>
     </section>
- 
+</div>
+</div>
+
+</section>
     <footer>
         <section id="Contact">
             <div class="final">
@@ -85,13 +85,11 @@
 
     </footer>
 
-</section>
-</div>
-</div>
+
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-analytics.js"></script>
-<script src="../Scripts/firebase.js"></script>
+<script src="../Scripts/config.js"></script>
 <script src= "../Scripts/contact.js"></script>
 
   </body>
