--- a/Htmls/Admin/commentDashboard.html
+++ b/Htmls/Admin/commentDashboard.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../Css/dashboard.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../../Css/commentDashboard.css" />
     <title>Comments Dashboard</title>
- 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="../Scripts/dashboard.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <a href="#" class="nav-trigger"><span>
-        </span></a>
+      <a href="#" class="nav-trigger"><span> </span></a>
     </div>
     <div class="side-nav">
-<nav>
-    <ul>
-        <li>
+      <nav>
+        <ul>
+          <!-- <li>
             <a href="./profile.html">
-                <span>
-                    <i class="fa fa-user"> </i></span>
-<span>Profile</span>
+              <span> <i class="fa fa-user"> </i></span>
+              <span>Profile</span>
             </a>
-        </li>
-        <li>
+          </li> -->
+          <li>
             <a href="./userDashboard.html">
-                <span>
-                    <i class="fa fa-user"> </i></span>
-<span>Users</span>
+              <span> <i class="fa fa-user"> </i></span>
+              <span>Users</span>
             </a>
-        </li>
-  <li>
-    <a href="./messageDashboard.html">
-        <span><i class="fa fa-envelope"></i></span>
-        <span> Messages</span>
-    </a>
-</li>
-<li class="active">
-    <a href="./commentDashboard.html">
-        <span><i class="fa fa-comment-o"></i></span>
-        <span>Comments</span>
-    </a>
-</li>
-<li>
-    <a href="./articleDashboard.html">
-        <span><i class="fa fa-credit-card-alt"></i></span>
-        <span>Articles
-        </span>
-    </a>
-</li>
-</ul>
-</nav>
+          </li>
+          <li>
+            <a href="./messageDashboard.html">
+              <span><i class="fa fa-envelope"></i></span>
+              <span> Messages</span>
+            </a>
+          </li>
+          <li class="active">
+            <a href="./commentDashboard.html">
+              <span><i class="fa fa-comment-o"></i></span>
+              <span>Comments</span>
+            </a>
+          </li>
+          <li>
+            <a href="./articleDashboard.html">
+              <span><i class="fas fa-newspaper"></i></span>
+              <span>Articles </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div class="main-content">
-Comments
+      <div class="personalComment">
+        <span>Article title</span>
+        <span>Name</span>
+        <span >Comment</span>
+        <button class="deleteBtn">X</button>
+        <hr>
+      </div>
     </div>
-</body>
+
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
+    <script src="../../Scripts/config.js"></script>
+    <script src="../../Scripts/commentDashboard.js"></script>
+
+  </body>
 </html>
