--- a/Htmls/Admin/deleteArticle.html
+++ b/Htmls/Admin/deleteArticle.html
@@ -7,25 +7,25 @@
     <link rel="stylesheet" href="../Css/bootstrap.css">  
     <link rel="stylesheet" href="../Css/addarticle.css">
     
-    <title>Add article</title>
+    <title>Delete article</title>
 </head>
 <body>
     <section class="addArticle-section">
 
     <div class="add-article">
-        <h2>Edit article</h2>
+        <h2>New article</h2>
         <form class="article">
             <input type="file" name="file" id="article-image"  accept="image/png, image/jpeg"> 
             <input type="text" name="title" class="text-box" placeholder=" The article's  title" required>
             <textarea name="article"  rows="5" placeholder="Your article" required></textarea>
-            <input type="submit" name="submit" class="send-btn" value="Edit" required>
+            <input type="submit" name="submit" class="send-btn" value="Add article" required>
         </form>
 </div>
     </section>
-    <!-- <h3>New Article</h3> -->
+    <h3>New Article</h3>
 <div class="display-newArticle">
 </div>
-<!-- <footer>
+<footer>
     <section id="Contact">
         <div class="final">
             <div class="icons">
@@ -44,7 +44,7 @@
 
     </section>
 
-</footer> -->
+</footer>
 
 </section>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
