--- a/Htmls/article.html
+++ b/Htmls/article.html
@@ -21,6 +21,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="../Htmls/blog.html">Blogs</a></li>
           <li><a href="../Htmls/contact.html"> Contact Me</a></li>
+          <li><a href="../Htmls/Admin/articleDashboard.html">Dashboard</a></li>
           <li><a href="../Htmls/login.html">Login</a></li>
       </ul>
       <ul class="right-menu">
@@ -38,8 +39,6 @@
 <div class="article-title"></div> 
 <div class="content">
 </div>
-<input type="submit" name="submit" class="send-btn" value="Edit">
-<input type="submit" name="submit" class="send-btn" value="Delete">
 <h3>Comments</h3>
 <form class="add-comment">
     <input type="name" name="name" placeholder="Name"> <br>
@@ -75,7 +74,7 @@
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
-<script src="../Scripts/firebase.js"></script>
+<script src="../Scripts/config.js"></script>
 <script src="../Scripts/article.js"></script>
 
 
