--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" /> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="Css\index.css">
     <title> Alice landing page</title>
 </head>
 <body>
-<div class="menu-btn">
-    <i class="fas fa-bars fa-2x"></i>
-</div>
+    <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
+     
   <div class="container">
       <!--Nav-->
       <nav class="main-nav">
  <img src="images/logoA.jpg" alt="Microsoft" class="logo">
      
-      <ul class="main-menu show">
+      <ul class="main-menu-show">
           <li><a href="index.html">Home</a></li>
           <!-- <li><a href="#skill">Skills</a></li>
           <li><a href="#">Project</a></li>
           <li><a href="#">Experience</a></li> -->
           <li><a href="Htmls\blog.html">Blogs</a></li>
           <li><a href="Htmls\contact.html"> Contact Me</a></li>
+          <li><a href="Htmls/Admin/articleDashboard.html">Dashboard</a></li>
           <li><a href="Htmls\login.html">Login</a></li>
       </ul>
       <ul class="right-menu">
@@ -51,8 +54,8 @@
 
     <!--Skills-->
     <section class="skills">
-        <div id="skill">
-            <img src="images/hrtml.png"  alt="">
+        <div class="skill">
+            <img src="images/html5.jpg"  alt="">
             <h3>HTML</h3>
             <p>
                 HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the meaning and structure of web content.ttery life.
@@ -108,8 +111,8 @@
     </div>
 
     <!--PROJECTS-->
-    <section class="projects">
-        <div class="project">
+    <section class="skills">
+        <div class="skill">
             <img src="images/dine.jpg" alt="">
             <h3>Dine restaurant website</h3>
             <p>
@@ -118,7 +121,7 @@
         <a href="#">SHOP NOW<i class="fas fa-chevron-right"></i>
          </a>
         </div> 
-        <div class="project">
+        <div class="skill">
             <img src="./images/base (1).jpg" alt="">
             <h3>Base Apparel coming soon page</h3>
             <p>
@@ -127,7 +130,7 @@
         <a href="#">SHOP NOW<i class="fas fa-chevron-right"></i>
          </a>
         </div> 
-        <div class="project">
+        <div class="skill">
             <img src="./images/paper (1).jpg"  alt="">
             <h3>Rock, Paper, Scissors game
             </h3>
@@ -135,7 +138,7 @@
         <a href="#">DOWNLOAD NOW<i class="fas fa-chevron-right"></i>
          </a>
         </div> 
-        <div class="project">
+        <div class="skill">
             <img src="images/coding.jpg"  alt="">
             <h3>Coding bootcamp testimonials slider</h3>
             <p>This challenge will be a nice test if you're new to JavaScript. It's also a great opportunity to play around with content animations and transitions..</p>
@@ -147,8 +150,8 @@
     <div class="title">
         <h1>WORK EXPERIENCE</h1>
     </div>
-    <section class="work">
-        <div class="works">
+    <section class="skills">
+        <div class="skill">
             <img src="images/inkomoko.jpg" alt="">
             <h3>Inkomoko</h3>
             <p>
@@ -157,7 +160,7 @@
         <a href="#">Learn more<i class="fas fa-chevron-right"></i>
          </a>
         </div> 
-        <div class="works">
+        <div class="skill">
             <img src="images/irembo.png" alt="">
             <h3>Irembo</h3>
             <p>
@@ -167,7 +170,7 @@
         <a href="#">Learn more<i class="fas fa-chevron-right"></i>
          </a>
         </div> 
-        <div class="works">
+        <div class="skill">
             <img src="images/ishyiga.jpg"  alt="">
             <h3>Algorithm inc</h3>
             <p>
@@ -176,7 +179,7 @@
         <a href="#">Learn more<i class="fas fa-chevron-right"></i>
          </a>
         </div> 
-        <div class="works">
+        <div class="skill">
             <img src="images/ishyiga.jpg"  alt="">
             <h3>Algorithm inc</h3>
             <p>
@@ -220,9 +223,9 @@
     </section>
 
 </footer>
-    <script>
+    <!-- <script>
         document.querySelector('.menu-btn').addEventListener('click'),
     () => document.querySelector('.main-menu').classList.toggle('show');
-    </script>
+    </script> -->
   </body>
   </html>
