--- a/Htmls/article.html
+++ b/Htmls/article.html
@@ -9,30 +9,21 @@
     <title> Read article page</title>
 </head>
 <body>
-<div class="menu-btn">
+<!-- <div class="menu-btn">
     <i class="fas fa-bars fa-2x"></i>
-</div>
+</div> -->
   
-      <!--Nav-->
-      <nav class="main-nav">
- <img src="../images/logoA.jpg" alt="logo" class="logo">
-     
-      <ul class="main-menu show">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../Htmls/blog.html">Blogs</a></li>
-          <li><a href="../Htmls/contact.html"> Contact Me</a></li>
-          <li><a href="../Htmls/Admin/articleDashboard.html">Dashboard</a></li>
-          <li><a href="../Htmls/login.html">Login</a></li>
-      </ul>
-      <ul class="right-menu">
-          <li>
-              <a href="#">
-                <i class="fas fa-search" >
-                </a>
-                </i>
-          </li>
-      </ul>
-    </nav>
+<div class="topnav" id="myTopnav">
+    <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
+    <a href="/index.html">Home</a>
+    <a href="./Htmls/blog.html">Blogs</a>
+    <a href="./Htmls/contact.html"> Contact Me</a>
+    <a href="./Htmls/Admin/articleDashboard.html">Dashboard</a>
+    <a href="./Htmls/login.html">Login</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
 <div class="jumbotron">
 <div class="upload-image">
 </div>
@@ -71,6 +62,16 @@
     </footer>
 
 </section>
+<script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+    </script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
