fixe the responsivness of Dashboard and blog page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="topnav" id="myTopnav">
         <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
         <a href="/index.html">Home</a>
-        <a href="./Htmls/blog.html">Blogs</a>
+        <a href="">Blogs</a>
         <a href="./Htmls/contact.html"> Contact Me</a>
         <a href="./Htmls/Admin/articleDashboard.html">Dashboard</a>
         <a href="./Htmls/login.html">Login</a>
