I create a responsive dashboard and blogs pages and logout

--- a/Htmls/Admin/articleDashboard.html
+++ b/Htmls/Admin/articleDashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../Css/articleDashboard.css">
+    <link rel="stylesheet" href="../../Css/Css/articleDashboard.css">
     <title>Alice-Dashboard</title>
 </head>
 <body>
@@ -27,10 +27,10 @@
                 <div class="header-menu">
                     <div class="menu-modulos">
                         <ul class="menu-modulosWrapper ">
-                            <li class="menu-modulosBt">
-                                <a href="../login.html" class="logout">Logout</a>
+                            <!-- <li class="menu-modulosBt">
+                                <a href="#" class="logout">Logout</a>
                                 <em class="menu-modulosFeed"></em>
-                            </li>
+                            </li> -->
                             <li class="menu-modulosBt">
                                 <a href="../Admin/userDashboard.html" class="menu-modulosBt-mainBt">Users</a>
                                 <em class="menu-modulosFeed"></em>
@@ -151,7 +151,7 @@
                             <div class="menu">
                                 <ul >
                                     <li>
-                                        <div class="menu-item"><a href="../login.html" class="menu-anchor" data-menu="1">Logout</a>
+                                        <div class="menu-item"><a href="#"  class="logout">Logout</a>
                                           <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
     <g>
         <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
@@ -618,12 +618,11 @@
         <div id="conteudo">
             <div class="conteudo-inner">
                 <div class="conteudo-wrapper">
-                    
+                    <h1>Articles</h1>
                     </div>
                     <div class="conteudo-box">
                         <div class="conteudo-boxInner">
                            <div class="main-content">
-                            <h1>Articles</h1>
                             <a href="../addArticle.html">Add New Article</a>
                             <a href="./articleDashboard.html">Articles</a>
                           </div>
