--- a/Htmls/article.html
+++ b/Htmls/article.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
   <link rel="stylesheet" href="../Css/bootstrap.css">  
-<link rel="stylesheet" href="../Css/article.css">
+<link rel="stylesheet" href="../article/Css/article.css">
     <title> Read article page</title>
 </head>
 <body>
@@ -15,11 +15,11 @@
   
 <div class="topnav" id="myTopnav">
     <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
-    <a href="/index.html">Home</a>
+    <a href="../landingPage/index.html">Home</a>
     <a href="./Htmls/blog.html">Blogs</a>
-    <a href="./Htmls/contact.html"> Contact Me</a>
+    <a href="../contact/contact.html"> Contact Me</a>
     <a href="./Htmls/Admin/articleDashboard.html">Dashboard</a>
-    <a href="./Htmls/login.html">Login</a>
+    <a href="../Htmls/Authentication/login.html">Login</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
@@ -74,7 +74,7 @@
     </script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
 <script src="../Scripts/config.js"></script>
 <script src="../Scripts/article.js"></script>
 
