--- a/Htmls/addArticle.html
+++ b/Htmls/addArticle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="../Css/bootstrap.css">  
-    <link rel="stylesheet" href="../Css/addarticle.css">
+    <link rel="stylesheet" href="../Css/Css/addarticle.css">
     
     <title>Add article</title>
 </head>
@@ -28,9 +28,9 @@
 </section>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-storage.js"></script>
-    <script src="../Scripts/firebase.js"></script>
+    <script src="../Scripts/config.js"></script>
     <script src ="../Scripts/addArticle.js"></script>
     
 </body>
