--- a/Htmls/login.html
+++ b/Htmls/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../Css/login.css">
+    <link rel="stylesheet" href="../Css/Css/login.css">
     <title> Login page</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
         <div class="topnav" id="myTopnav">
             <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
             <a href="/index.html">Home</a>
-            <a href="./blog.html">Blogs</a>
-            <a href="./contact.html"> Contact Me</a>
-            <a href="./Admin/articleDashboard.html">Dashboard</a>
+            <a href="../blog/blog.html">Blogs</a>
+            <a href="../Htmls/contact.html"> Contact Me</a>
+            <!-- <a href="./Admin/articleDashboard.html">Dashboard</a> -->
             <a href="./login.html">Login</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
@@ -81,8 +81,8 @@
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
-<script src="../Scripts/login.js" ></script>
 <script src="../Scripts/config.js" ></script>
+<script src="../Scripts/login.js" ></script>
 <!-- <script src="../Scripts/login.js"></script> -->
 </body>
 </html>
