--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="Css\index.css">
+    <link rel="stylesheet" href="./Css/Css/index.css">
     <title> Alice landing page</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
             <div class="topnav" id="myTopnav">
         <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
         <a href="/index.html">Home</a>
-        <a href="">Blogs</a>
+        <a href="./blog/blog.html">Blogs</a>
         <a href="./Htmls/contact.html"> Contact Me</a>
         <a href="./Htmls/Admin/articleDashboard.html">Dashboard</a>
         <a href="./Htmls/login.html">Login</a>
@@ -82,7 +82,7 @@
          </a>
         </div> 
     </section>
-    <!--Xbox-->
+    <!-- Xbox
     <section class="xbox">
         <div class="content">
             <h2>Xbox Game Pass Ultimate</h2>
@@ -91,7 +91,7 @@
            Join Now <i class="fas fa-chevron-right"></i>
        </a>
         </div>
-    </section>
+    </section> -->
 
     <!--Title-->
     <div class="title">
