I modfy the menu and footer to all pages

--- a/Htmls/Admin/messageDashboard.html
+++ b/Htmls/Admin/messageDashboard.html
@@ -28,7 +28,7 @@
                     <div class="menu-modulos">
                         <ul class="menu-modulosWrapper ">
                             <!-- <li class="menu-modulosBt">
-                                <a href="../login.html" class="logout">Logout</a>
+                                <a href="#" class="logout">Logout</a>
                                 <em class="menu-modulosFeed"></em>
                             </li> -->
                             <li class="menu-modulosBt">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="header-menu">
-                    <div class="header-search ">
+                    <!-- <div class="header-search ">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="imgView" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.213" style="enable-background:new 0 0 485.213 485.213;" xml:space="preserve" class="spt" data-id="34097" data-kw="magnifier12">
     <g>
         <g>
@@ -141,7 +141,7 @@
     </svg>
                         <input type="text" value="Some search field" /></p>
                         <div class="clear"></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="menu-box">
