--- a/Htmls/contact.html
+++ b/Htmls/contact.html
@@ -6,21 +6,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <!-- <link rel="stylesheet" href="../Css/bootstrap.css">   -->
     <link rel="stylesheet" href="../Css/Css/contact.css">
+    <link rel="stylesheet" href="../Css/sharedFooter.css">
+    <link rel="stylesheet" href="../Css/Css/sharedMenu.css">
     <title> Contact page</title>
 </head>
 <body>
   <div class="container">
-    <div class="topnav" id="myTopnav">
-        <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
-        <a href="/index.html">Home</a>
-        <a href="/blog/blog.html">Blogs</a>
-        <a href="./contact.html"> Contact Me</a>
-        <!-- <a href="../Htmls/Admin/articleDashboard.html">Dashboard</a> -->
-        <a href="./login.html">Login</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </div>
+    <div class="logo">
+      <h3>Alice gatera</h3>
+  </div>
+  <ul class="nav-links">
+    <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
+    <a href="/index.html">Home</a>
+    <a href="../blog/blog.html">Blogs</a>
+    <a href="../Htmls/contact.html"> Contact </a>
+    <!-- <a href="./Admin/articleDashboard.html">Dashboard</a> -->
+    <a href="./login.html">Login</a>
+  </ul>
+  <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+  </div>
+</nav>
     <!--Showcase-->
     <header class="showcase">
 
@@ -48,29 +56,28 @@
             </div>
     </section>
 </div>
-</section>
-    <footer>
-        <section id="Contact">
-            <div class="final">
-                <div class="icons">
-                    <ul>
-                        <li><a href="https://github.com/Alice-Gatera"><i class="fab fa-github"></i></a></li>
-                        <li><a href="mailto:aligatera15@gmail.com"><i class="fas fa-envelope"></i></a></li>
-                        <li><a href="#"><i class="fas fa-phone-alt"></i></a></li>
-                        <li><a href="#"><i class="fas fa-map-marker"></i></a></li>
+<footer>
+  <section id="Contact">
+      <div class="final">
+          <div class="icons">
+              <ul>
+                  <li><a href="https://github.com/Alice-Gatera"><i class="fab fa-github"></i></a></li>
+                  <li><a href="mailto:aligatera15@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                  <li><a href="#"><i class="fas fa-phone-alt"></i></a></li>
+                  <li><a href="#"><i class="fas fa-map-marker"></i></a></li>
 
-                    </ul>
-                </div>
-            </div>
-                <div class=Copyright>
-                    <p><small>&copy; 2020 Alice GATERA|All Rights Reserved</small></p>
-                </div>
+              </ul>
+          </div>
 
-        </section>
+          <div class=Copyright>
+              <p><small>&copy; 2020 Alice GATERA|All Rights Reserved</small></p>
+          </div>
 
-    </footer>
+  </section>
 
-    <script>
+</footer>
+
+    <!-- <script>
         function myFunction() {
           var x = document.getElementById("myTopnav");
           if (x.className === "topnav") {
@@ -79,12 +86,13 @@
             x.className = "topnav";
           }
         }
-        </script>
+        </script> -->
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
 <!-- <script src="../Scripts/config.js"></script> -->
 <script src= "../Scripts/contact.js"></script>
+<script src="../Scripts/menu.js"></script>
 
   </body>
   </html>
